solc_ossfuzz_seed_corpus/test_solidity/test_a9efbd5e4b340d21dbfa1636eafb111aac6f5a14b5ad1b3b2db4e5c0aaec71c2_836c4e644ae6b14f79dc1b69318bc58963121c76_sol.sol
==== Source:  ====

==== Source: su0.sol ====
function f0(address i0,string memory i1)    
{
  address l0 = address(0x0000000000000000000000000000000000000002);
  address l1 = address(0x0000000000000000000000000000000000000003);
  if (false)
  {
    if ((((uint152(5708990770823839524233143877797980545530986495) % (uint152(5708990770823839524233143877797980545530986495) - uint152(0))) * uint152(4081441468820687758699748226600188556340530790)) >= uint152(5708990770823839524233143877797980545530986495)))
    {
      if (true)
      {
      }
    }
  }
  else
  {
    if (true)
    {
    }
    else if (false)
    {
    }
    if (false)
    {
    }
    else if (true)
    {
    }
    else
    {
    }
    while (((false && true) && false))
    {
      continue;
    }
  }
}
pragma solidity >= 0.0.0;
bytes9 constant cons0 = (((bytes9(0x2bc57ee94f55615682) & ((bytes9(0xffffffffffffffffff) ^ bytes9(0x000000000000000000)) | bytes9(0xffffffffffffffffff))) | bytes9(0xa14abd61bb11eeaf7f)) ^ bytes9(0x194eeaf405a0e38ec8));
enum EN0 {
  M0, M1, M2, M3, M4, M5, M6, M7,
  M8, M9, M10, M11, M12, M13, M14, M15,
  M16, M17, M18, M19, M20, M21, M22, M23,
  M24, M25, M26, M27, M28, M29, M30, M31,
  M32, M33, M34, M35, M36, M37, M38, M39,
  M40, M41, M42, M43, M44, M45, M46, M47,
  M48, M49, M50, M51, M52, M53, M54, M55,
  M56, M57, M58, M59, M60, M61, M62, M63,
  M64, M65, M66, M67, M68, M69, M70, M71,
  M72, M73, M74, M75, M76, M77, M78, M79,
  M80, M81, M82, M83, M84, M85, M86, M87,
  M88, M89, M90, M91, M92, M93, M94, M95,
  M96, M97, M98, M99, M100, M101, M102, M103,
  M104, M105, M106, M107, M108, M109, M110, M111,
  M112, M113, M114, M115, M116, M117, M118, M119,
  M120, M121, M122, M123, M124, M125, M126, M127,
  M128, M129, M130, M131, M132, M133, M134, M135,
  M136, M137, M138, M139, M140, M141, M142, M143,
  M144, M145, M146, M147, M148, M149, M150, M151,
  M152, M153, M154, M155, M156, M157, M158, M159,
  M160, M161, M162, M163, M164, M165, M166, M167,
  M168, M169, M170, M171, M172, M173, M174, M175,
  M176, M177, M178, M179, M180, M181, M182, M183,
  M184, M185, M186, M187, M188, M189, M190, M191,
  M192, M193, M194, M195, M196, M197, M198, M199,
  M200, M201, M202, M203, M204, M205, M206, M207,
  M208, M209, M210, M211, M212, M213, M214, M215

}
library L0 {
  modifier m0(bytes6 i0) 
  {
    _;
    assert((true && false));
  }
  bytes18 public constant cons1 = (((bytes18(0xffffffffffffffffffffffffffffffffffff) | bytes18(0x2b487a234f83bca92e395610e8fab0e01bd6)) & bytes18(0xffffffffffffffffffffffffffffffffffff)) ^ bytes18(0xffffffffffffffffffffffffffffffffffff));
  event ev0(address payable  ep0, function (function (bool, bool) external   returns (address payable), int8, uint160) external   returns (uint240, uint112)  ep1);
  type T0 is int136;
  error er0(bytes8 ep0, function (bool) external   returns (int96, address) ep1);
  using L0 for *;
  modifier m1() 
  {
    _;
    if (true)
    {
      if (false)
      {
      }
      else
      {
        address l0 = address(0x0000000000000000000000000000000000000007);
      }
    }
    else if (true)
    {
      assembly
      {
        if cons1
        {
        }
      }
    }
  }
}
type T1 is address;
// ----
// TypeError 7615: (su0.sol:3082-3087): Only direct number constants and references to such constants are supported by inline assembly.
